<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/x_ray_menu_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:focusable="true"
    tools:context="core.MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="@dimen/textview_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="475dp"
        android:background="@drawable/radio_group_background"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/lamp_y_smart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/y_smart_x_ray_lamp"
            android:textAlignment="center"
            android:textColor="@color/default_text_color"
            android:textSize="23sp" />

        <RadioButton
            android:id="@+id/lamp_eresco"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@null"
            android:padding="10dp"
            android:text="@string/eresco_x_ray_lamp"
            android:textAlignment="center"
            android:textColor="@color/default_text_color"
            android:textSize="23sp"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="206dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/textview_width"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/buttons_start_buttons"
        android:padding="@dimen/textview_padding"
        android:text="@string/button_select_xray"
        android:textAlignment="center"
        android:textColor="@color/default_text_color"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper
        android:id="@+id/inputXRayVoltage"
        android:layout_width="@dimen/input_field_size"
        android:layout_height="@dimen/input_field_size"
        android:layout_marginTop="@dimen/input_up_margin"
        android:layout_marginEnd="@dimen/input_side_margin"
        android:hint="@string/null_str"
        android:inputType="none"
        android:textColor="@color/default_text_color"
        app:enum_type="@string/voltage_enum"
        app:labelText="@string/voltage"
        app:layout_constraintEnd_toStartOf="@+id/inputXRayCurrent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:list_title="@string/choose_voltage"
        app:using_list_input="true"
        tools:layout_editor_absoluteY="279dp">

    </com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper>

    <com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper
        android:id="@+id/inputXRayCurrent"
        android:layout_width="@dimen/input_field_size"
        android:layout_height="@dimen/input_field_size"
        android:layout_marginTop="@dimen/input_up_margin"
        android:hint="@string/integer_placeholder"
        android:inputType="number"
        android:textColor="@color/default_text_color"
        app:labelText="@string/current"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:suffixText="mA" />

    <com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper
        android:id="@+id/inputXRaySteelThickness"
        android:layout_width="@dimen/input_field_size"
        android:layout_height="@dimen/input_field_size"
        android:layout_marginStart="@dimen/input_side_margin"
        android:hint="@string/decimal_placeholder"
        android:inputType="numberDecimal"
        android:textColor="@color/default_text_color"
        app:labelText="@string/steel_thickness"
        app:layout_constraintStart_toEndOf="@+id/inputXRayCurrent"
        app:layout_constraintTop_toTopOf="@+id/inputXRayCurrent"
        app:suffixText="mm" />

    <com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper
        android:id="@+id/inputXRayFilmType"
        android:layout_width="@dimen/input_field_size"
        android:layout_height="@dimen/input_field_size"
        android:layout_marginTop="@dimen/input_up_margin"
        android:layout_marginEnd="@dimen/input_side_margin"
        android:hint="@string/null_str"
        android:inputType="none"
        android:textColor="@color/default_text_color"
        app:enum_type="@string/film_type_enum"
        app:labelText="@string/film_type"
        app:layout_constraintEnd_toStartOf="@+id/inputXRaySourceToDetector"
        app:layout_constraintTop_toBottomOf="@+id/inputXRayVoltage"
        app:list_title="@string/choose_film_type"
        app:using_list_input="true">

    </com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper>

    <com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper
        android:id="@+id/inputXRaySourceToDetector"
        android:layout_width="@dimen/input_field_size"
        android:layout_height="@dimen/input_field_size"
        android:layout_marginTop="@dimen/input_up_margin"
        android:hint="@string/integer_placeholder"
        android:inputType="number"
        android:textColor="@color/default_text_color"
        app:labelText="@string/source_to_detector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputXRayCurrent"
        app:suffixText="mm" />

    <com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper
        android:id="@+id/inputXRayTargetDensity"
        android:layout_width="@dimen/input_field_size"
        android:layout_height="@dimen/input_field_size"
        android:layout_marginStart="@dimen/input_side_margin"
        android:layout_marginTop="@dimen/input_up_margin"
        android:hint="@string/decimal_placeholder"
        android:inputType="numberDecimal"
        android:textColor="@color/default_text_color"
        app:labelText="@string/target_density"
        app:layout_constraintStart_toEndOf="@+id/inputXRaySourceToDetector"
        app:layout_constraintTop_toBottomOf="@+id/inputXRaySteelThickness"
        app:suffixText="">

    </com.julian.lbniwkalkulator.components.inputfields.InputFieldWrapper>

    <Button
        android:id="@+id/calculate_button_xray"
        android:layout_width="@dimen/textview_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_up_margin"
        android:background="@drawable/buttons_button_selector"
        android:text="@string/calculate"
        android:textColor="@color/default_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputXRaySourceToDetector"
        app:layout_constraintVertical_bias="0.005"
        tools:ignore="VisualLintButtonSize" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="165dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="232dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="785dp" />

    <Button
        android:id="@+id/x_ray_menu_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_back_button"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>