<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/isotope_menu_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="core.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/textview_width"
        android:layout_height="wrap_content"
        android:background="@drawable/start_buttons"
        android:padding="@dimen/textview_padding"
        android:text="@string/button_select_isotope"
        android:textAlignment="center"
        android:textColor="@color/default_text_color"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
...
